# robo-chat

./: .env.example  .gitignore  README.md  pyproject.toml
app/: dependencies.py  globals.py  server.py
app/routers/: chat_room.py  drill_bot.py  file.py  supervisor.py
chains/chat/: chain.py  graph.py
chains/core/: chains.py
chains/rag/: graph.py
chains/supervisor/: graph.py
notebooks/: check_os.ipynb  led.ipynb  led.py  supervisor.ipynb  trace_test.ipynb  two_agent_debate_tools.ipynb
utils/: AppSettings.py  aiutils.py  fileutils.py  pgutils.py  pinutils.py  retriever.py
utils/debate/: DialogueAgent.py  DialogueAgentWithTools.py  DialogueSimulator.py  DialogueUtils.py
