[tool.poetry]
name = "robo-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "0.27.2"
uvicorn = "^0.23.2"
langserve = "^0.3.0"
langchain = "^0.3.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.4"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
