[tool.poetry]
name = "robo-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "utils" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "0.27.2"
uvicorn = "^0.23.2"
langserve = "^0.3.0"
langchain = "^0.3.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
langchain-community = "^0.3.11"
langchain-experimental = "^0.3.3"
langchain-openai = "^0.2.12"
langchain-groq = "^0.2.1"
arxiv = "^2.1.3"
duckduckgo-search = "^6.4.1"
wikipedia = "^1.4.0"
langgraph = "^0.2.59"
langchain-postgres = "^0.0.12"
pathvalidate = "^3.2.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
python-multipart = "^0.0.19"
pypdf = "^5.1.0"
langfuse = "^2.56.2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.4"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
